--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Julio E - EStudiante de ASIR">
   <meta name="keywords" content="Estudiante ASIR, Julio E, Informática, tecnología, REDES, Programación">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://julioe-dev.github.io/Proyecto-web-portfolio-Lenguaje-de-marcas/">
+  <link rel="canonical" href="https://github.com/JulioE-dev/Master-Proyecto-1-HTML-CSS">
 
 <!-- ESTILOS Y FUENTES -->
 
